fixes for headline alignment

--- a/wp-content/themes/chicago-reporter/less/photo-header.less
+++ b/wp-content/themes/chicago-reporter/less/photo-header.less
@@ -330,6 +330,11 @@ h1.entry-title {
   padding-top:1.5em;
   bottom: 0;
 
+  &.ddcpc-top {
+    top:5em;
+    bottom:auto;
+  }
+
   &.ddcpc-center {
     max-width:80%;
     width:80%;
@@ -346,6 +351,24 @@ h1.entry-title {
       background-color:@red;
       margin:0 auto 1.5em auto;
     }
+  }
+
+  &.ddcpc-middle {
+    top:50%;
+    bottom: auto;
+    transform:translateY(-40%);
+
+    &:after{
+      content:'';
+      display:block;
+      width:100%;
+      height:0;
+      margin:0 auto 3em auto;
+    }
+  }
+  &.ddcpc-right {
+    right:0;
+    left:auto;
   }
 }
 
@@ -640,6 +663,10 @@ h1.entry-title {
     &.ddcpc-left {
       left:2.5%;
     }
+
+    &.ddcpc-right {
+      right:2.5%;
+    }
   }
 }
 
@@ -763,8 +790,21 @@ h1.entry-title {
   }  
 
   .longform-title {
+    box-sizing: border-box;
+    margin: 0 2.5%;
+    padding: 0;
+    left: 0;
+    width: 90%;
+    max-width: 90%;
+    padding-top: 1.5em;
+    bottom: 0;
+
     &.ddcpc-left {
       left:auto;
+    }
+
+    &.ddcpc-center {
+      margin:0;
     }
 
     &.ddcpc-right { 
@@ -773,7 +813,7 @@ h1.entry-title {
     }
 
     &.ddcpc-top {
-      top:4em;
+      top:6em;
     }
 
     &.ddcpc-bottom {
@@ -784,7 +824,7 @@ h1.entry-title {
     &.ddcpc-middle {
       top:50%;
       bottom: auto;
-      transform:translateY(-50%);
+      transform:translateY(-40%);
 
       &:after{
         content:'';
